--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   
         <h2>Comparison among systems</h2>	
-        <!-- <p><i>Random sample from Evaluation set 1 in the paper.</i></p>	 -->
+        <p><i>Sample from Table 4 in the paper.</i></p>	
         <table>	
           <thead>	
             <tr>	
@@ -29,19 +29,61 @@
             </tr>	
           </thead>	
           <tbody>	
-            <tr><td colspan="6"><span>1: How careful she is!</span></td></tr>	
+            <tr><td colspan="6"><span>1: What do you usually do in the afternoon?</span></td></tr>	
             <tr>	
-              <td><audio controls=""><source src="TACO/EN_testset_000322.npy.wav" type="audio/wav"></audio></td>	
-              <td><audio controls=""><source src="TP-DPE/EN_testset_000322.npy.wav" type="audio/wav"></audio></td>	
-              <td><audio controls=""><source src="TP-ToBI/EN_testset_000322.npy.wav" type="audio/wav"></audio></td>	
-              <td><audio controls=""><source src="GT-ToBI/EN_testset_000322.npy.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TACO/EN_testset_000022.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-DPE/EN_testset_000022.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-ToBI/EN_testset_000022.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="GT-ToBI/EN_testset_000022.wav" type="audio/wav"></audio></td>	
             </tr>	
-            <tr><td colspan="6"><span>2: How careful she is!</span></td></tr>	
+            <tr><td colspan="6"><span>2: What are the man and the woman talking about?</span></td></tr>	
             <tr>	
-              <td><audio controls=""><source src="TACO/EN_testset_000322.npy.wav" type="audio/wav"></audio></td>	
-              <td><audio controls=""><source src="TP-DPE/EN_testset_000322.npy.wav" type="audio/wav"></audio></td>	
-              <td><audio controls=""><source src="TP-ToBI/EN_testset_000322.npy.wav" type="audio/wav"></audio></td>	
-              <td><audio controls=""><source src="GT-ToBI/EN_testset_000322.npy.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TACO/EN_testset_000030.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-DPE/EN_testset_000030.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-ToBI/EN_testset_000030.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="GT-ToBI/EN_testset_000030.wav" type="audio/wav"></audio></td>	
+            </tr>	
+            <tr><td colspan="6"><span>3: How high was the plane when the engine failed?</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="TACO/EN_testset_000031.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-DPE/EN_testset_000031.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-ToBI/EN_testset_000031.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="GT-ToBI/EN_testset_000031.wav" type="audio/wav"></audio></td>	
+            </tr>	
+            <tr><td colspan="6"><span>4: Would you like some rice and beef?</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="TACO/EN_testset_000148.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-DPE/EN_testset_000148.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-ToBI/EN_testset_000148.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="GT-ToBI/EN_testset_000148.wav" type="audio/wav"></audio></td>	
+            </tr>	
+            <tr><td colspan="6"><span>5: What a nice vase it is!</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="TACO/EN_testset_000319.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-DPE/EN_testset_000319.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-ToBI/EN_testset_000319.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="GT-ToBI/EN_testset_000319.wav" type="audio/wav"></audio></td>	
+            </tr>	
+            <tr><td colspan="6"><span>6: How careful she is!</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="TACO/EN_testset_000322.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-DPE/EN_testset_000322.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-ToBI/EN_testset_000322.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="GT-ToBI/EN_testset_000322.wav" type="audio/wav"></audio></td>	
+            </tr>	
+            <tr><td colspan="6"><span>7: There are many fun places to see and things to do.</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="TACO/EN_testset_000397.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-DPE/EN_testset_000397.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-ToBI/EN_testset_000397.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="GT-ToBI/EN_testset_000397.wav" type="audio/wav"></audio></td>	
+            </tr>	
+            <tr><td colspan="6"><span>8: They can grow so big, blocking all daylight, making it very dark and ominous standing under them.</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="TACO/EN_testset_000418.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-DPE/EN_testset_000418.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="TP-ToBI/EN_testset_000418.wav" type="audio/wav"></audio></td>	
+              <td><audio controls=""><source src="GT-ToBI/EN_testset_000418.wav" type="audio/wav"></audio></td>	
             </tr>	
           </tbody>	
   
