--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   
         <h2>Comparison among systems</h2>	
-        <p><i>Sample from Table 4 in the paper.</i></p>
+        <p>Sample from Table 4 in the paper.</p>
         <p><b>TACO: </b>the model architecture is the same with the Tacotron and the input features are simply composed of the labels of phoneme, lexical stress, and word boundary.</p>
         <p><b>TP-DPE: </b>the unsupervised method. Phone-level prosodic features predicted from text, including phone duration, pitch and energy (DPE features), are used to realize prosody modeling.</p>
         <p><b>TP-ToBI: </b>the proposed method. the ToBI-related labels are predicted from text using the proposed ToBI prediction frontend.</p>
