--- a/index.html
+++ b/index.html
@@ -23,14 +23,9 @@
         <h2>Controllability evaluation of speech synthesis backend</h2>	
         <p><i>Sample from Table 2 in the paper.</i></p>
         <p>Under the given ground truth ToBI labels, test whether each ToBI feature is effectively reflected in generated speech.</p>
-        <table>	
-          <thead>	
-            <tr>	
-              <th>GT-ToBI</th>
-            </tr>	
-          </thead>	
+        <table>		
           <tbody>	
-            <tr><td colspan="6"><span>1: "Hi(H*) there(H-), can I help you find(H*) anything(H-L%)?</span></td></tr>	
+            <tr><td colspan="6"><span>1: Hi(H*) there(H-), can I help you find(H*) anything(H-L%)?</span></td></tr>	
             <tr>	
               <td><audio controls=""><source src="GT-ToBI/badcase_0001_1.wav" type="audio/wav"></audio></td>		
             </tr>	
