--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
               <td><audio controls=""><source src="GT-ToBI/badcase_0075_1.wav" type="audio/wav"></audio></td>		
             </tr>		
           </tbody>	
-  
+        </table>
+
         <h2>Comparison among systems</h2>	
         <p><i>Sample from Table 4 in the paper.</i></p>
         <p><b>TACO: </b>the model architecture is the same with the Tacotron and the input features are simply composed of the labels of phoneme, lexical stress, and word boundary.</p>
