--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <h2>Controllability evaluation of speech synthesis backend</h2>	
         <p><i>Sample from Table 2 in the paper.</i></p>
-        <p><b>Controllability evaluation: </b>Under the given ground truth ToBI labels, test whether each ToBI feature is effectively reflected in generated speech.</p>
+        <p><b>Controllability evaluation: </b>under the given ground truth ToBI labels, test whether each ToBI feature is effectively reflected in generated speech.</p>
         <table>		
           <tbody>	
             <tr><td colspan="6"><span>1: Hi(H*) there(H-), can I help you find(H*) anything(H-L%)?</span></td></tr>	
