--- a/index.html
+++ b/index.html
@@ -25,7 +25,31 @@
         <p><b>Controllability evaluation: </b>under the given ground truth ToBI labels, test whether each ToBI feature is effectively reflected in generated speech.</p>
         <table>		
           <tbody>	
-            <tr><td colspan="6"><span>1: Hi(H*) there(H-), can I help you find(H*) anything(H-L%)?</span></td></tr>	
+            <tr><td colspan="6"><span>1a: Does Bob play basketball(H*) every(L*) day(L-H%)?</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="GT-ToBI/badcase_0087_1.wav" type="audio/wav"></audio></td>		
+            </tr>	
+            <tr><td colspan="6"><span>1b: Does Bob play basketball every(L*) day(L+H* H-H%)?</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="GT-ToBI/badcase_0087_2.wav" type="audio/wav"></audio></td>		
+            </tr>	
+            <tr><td colspan="6"><span>2a: Where is the washroom(H* L-L%), Do you know(H* L-L%)?</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="GT-ToBI/badcase_0078_1.wav" type="audio/wav"></audio></td>		
+            </tr>	
+            <tr><td colspan="6"><span>2b: Where(H*) is the washroom(H* H-L%), Do you know(L+H* H-H%)?</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="GT-ToBI/badcase_0078_2.wav" type="audio/wav"></audio></td>		
+            </tr>	
+            <tr><td colspan="6"><span>3a: Hey, I'm Jim(H* L-L%). And no(H* L-), I'm not from China(!H* L-L%). My grandparents are(L+H* H-), but I was born(H*) here(!H* L-L%). What about yourself(H* L-L%)?</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="GT-ToBI/badcase_0112_1.wav" type="audio/wav"></audio></td>		
+            </tr>	
+            <tr><td colspan="6"><span>3b: Hey(H* H-L%), I'm Jim(L*+H H-L%). And no(H* H-), I'm not(H*) from China(L-L%). My grandparents(H*) are(!H* L-), but I(H*) was born here(H* L-L%). What about yourself(H* L-L%)?</span></td></tr>	
+            <tr>	
+              <td><audio controls=""><source src="GT-ToBI/badcase_0112_2.wav" type="audio/wav"></audio></td>		
+            </tr>	
+            <!-- <tr><td colspan="6"><span>1: Hi(H*) there(H-), can I help you find(H*) anything(H-L%)?</span></td></tr>	
             <tr>	
               <td><audio controls=""><source src="GT-ToBI/badcase_0001_1.wav" type="audio/wav"></audio></td>		
             </tr>	
@@ -41,14 +65,10 @@
             <tr>	
               <td><audio controls=""><source src="GT-ToBI/badcase_0054_1.wav" type="audio/wav"></audio></td>		
             </tr>
-            <tr><td colspan="6"><span>5: Does Bob play basketball(H*) every(L*) day(L-H%)?</span></td></tr>	
-            <tr>	
-              <td><audio controls=""><source src="GT-ToBI/badcase_0087_1.wav" type="audio/wav"></audio></td>		
-            </tr>	
             <tr><td colspan="6"><span>6: A quiet day's fishing(H* L-), or eight(H*) hours in a cinema(L-) seeing the same(H*) film over(!H*) and over(!H*) again(L-L%), is usually as far(H*) as they get(L-L%).</span></td></tr>	
             <tr>	
               <td><audio controls=""><source src="GT-ToBI/badcase_0075_1.wav" type="audio/wav"></audio></td>		
-            </tr>		
+            </tr>		 -->
           </tbody>	
         </table>
 
