--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Controllability evaluation of speech synthesis backend</h2>	
         <p><i>Sample from Table 2 in the paper.</i></p>
         <p><b>Controllability evaluation: </b>under the given ground truth ToBI labels, test whether each ToBI feature is effectively reflected in generated speech.</p>
-        <p><b>Pitch accents </b>mark the stressed syllable of specific words that carry the most information in a sentence. The default is H*, L*, L*+H, L+H*, and !H*.</p>
+        <p><b>Pitch accents </b>mark the stressed syllable of specific words that carry the most information in a sentence. The default is H* (high accent), L* (low accent), L*+H (a syllable which starts with a low accent and then rises), L+H* (again low-high on one syllable, but with the second part accented), and !H*(This H is pitched somewhat lower than the earlier one.).</p>
         <p><b>Boundary tones </b>describe the pitch trend at each full intonation phrase boundary. The default is H% (high tone) and L% (low tone).</p>
         <p><b>Phrase accents </b>describe the pitch movement between the ultimate pitch accent and the boundary tone. The default is H- and L-.</p>
         <table>		
